--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/limi7break/barbu-js#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "fomantic-ui-css": "^2.8.4",
