--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "fomantic-ui-css": "^2.8.4",
     "lodash": "^4.17.15",
+    "node-persist": "^3.0.5",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "uuid": "^7.0.2",
